initial styling and head

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="/scss/main.scss" />
-    <title>Scss Vite Starter Template</title>
+    <!-- Script -->
+    <script type="module" src="/main.js" defer></script>
+    <!-- Title -->
+    <title>Chef Services</title>
   </head>
   <body>
-    <script type="module" src="/main.js"></script>
+    <header class="primary-header">
+      <img src="assets/logo.svg" alt="Chef John Wellingto" />
+    </header>
+
+    <main></main>
+
+    <footer></footer>
   </body>
 </html>
