--- a/index.html
+++ b/index.html
@@ -19,11 +19,129 @@
     <title>Chef Services</title>
   </head>
   <body>
-    <header class="primary-header">
-      <img src="assets/logo.svg" alt="Chef John Wellingto" />
+    <header class="primary-header | margin-block-start-24 bg-neutral-900">
+      <img
+        class="logo | mx-auto"
+        src="assets/logo.svg"
+        alt="Chef John Wellingto"
+      />
+      <nav class="primary-nav | margin-block-start-24">
+        <ul class="flex-group mx-auto">
+          <li><a href="#about">About</a></li>
+          <li><a href="#meals">Meals</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="hero | bg-neutral-900 clr-neutral-100 text-center">
+        <div class="container">
+          <h1 class="fs-900 ff-accent margin-block-end-48">
+            Homecooked meals delivered straight to your door
+          </h1>
+
+          <div class="flex-group mx-auto">
+            <button class="button" data-type="accent">Place order</button>
+            <a href="#about" class="button" data-type="outline">More info</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="about">
+        <div class="container">
+          <div class="even-columns">
+            <div>
+              <picture>
+                <source srcset="assets/about.avif" type="image/avif" />
+                <source srcset="assets/about.webp" type="image/webp" />
+                <img
+                  class="shift-up box-shadow-1"
+                  src="assets/about.jpg"
+                  alt=""
+                />
+              </picture>
+            </div>
+
+            <div class="flow">
+              <header class="section-heading">
+                <h2 class="fs-800 ff-accent clr-primary-500">
+                  Amazing food without the hassle
+                </h2>
+                <p class="fs-600 uppercase">
+                  We do all the work, so all you have to do is sit back and
+                  enjoy
+                </p>
+              </header>
+              <h3 class="lead">it's ready to go</h3>
+              <p>
+                Whether it's for a romantic evening with your significant other
+                or if you're hosting a large party and need food for a big
+                group, we're here to help!
+              </p>
+              <p>
+                We can cater to whatever your needs are, and ensure that our
+                delicious food is delivered at the perfect moment, fresh, hot,
+                and ready to eat exactly when you need it to be there.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section | bg-neutral-200">
+        <div class="container">
+          <header class="section-heading" data-decoration="true">
+            <h2 class="fs-800 ff-accent clr-primary-500">We make great food</h2>
+            <p class="fs-600 uppercase">
+              Cooking is our passion, with quality and freshness being of utmost
+              importance
+            </p>
+          </header>
+
+          <div class="grid-auto-fit">
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                fresh ingredients
+              </h3>
+              <p>
+                We take food seriously, and the first thing to making great food
+                is using fresh ingredients. If the ingredients don't meet our
+                standard, we don't use them.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                professional chef
+              </h3>
+              <p>
+                Chef Wellington is a professionally trained chef who's worked in
+                top kitchens around the world.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                ready for you
+              </h3>
+              <p>
+                Stop using services where you have to re-heat your food. We get
+                it to your door read to eat, withou sacrificing quality at all.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                made with love
+              </h3>
+              <p>
+                Food is our passion, and we infuse that love and passion into
+                every single plate that we make and deliver straight to your
+                home.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
